# n2-param

./: pyproject.toml
n2_param/core/parsing/: asap_report_parser.py
n2_param/export/: __init__.py  interfaces.py  sheet_export.py
n2_param/gui/: chart_config.py  chart_series.py  main_window.py  mpl_util.py  summary_charts.py  summary_tab_page.py  view_registry.py
n2_param/gui/dialogs/: filename_template_dialog.py
n2_param/gui/widgets/: analysis_log_chart.py  bjh_chart.py  isotherm_chart.py  raw_text.py
n2_param/resources/: strings.csv
tests/: test_parser.py  test_sheet_export.py
